--- a/first.html
+++ b/first.html
@@ -13,6 +13,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus vel reprehenderit veniam? Non vero totam
         distinctio corporis nostrum nihil sed, voluptates aliquam repellendus pariatur?</p>
         <h3>New destination</h3>
+        <img src="any.jpg" alt="">
 
 </body>
 
